Atualização da fonte e algumas informações no site.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Hina Mincho','sans-serif' !important;
+    font-family: 'Century Gothic' !important;
     font-size:18px !important;
     font-style: normal;
     font-weight: normal;
